--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="main">
         <section class="hero">
-                <h1 id="title">Nelson Mandela - The Revolutionary Leader</h1>
+                <h1 id="title">Nelson Mandela -- The Revolutionary Leader</h1>
                 <p id="caption">“During my lifetime I have dedicated myself to this struggle of the African people. I have fought against white domination, and I have fought against black domination. I have cherished the ideal of a democratic and free society in which all persons live together in harmony and with equal opportunities. It is an ideal which I hope to live for and to achieve. But if needs be, it is an ideal for which I am prepared to die.”</p>
         </section>
 
